--- a/RegistrationApp.Api/appsettings.json
+++ b/RegistrationApp.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RegistrationAppDbContext": "Server=localhost;Database=RegistrationApp;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  }
 }
