--- a/RegistrationApp.Api/RegistrationApp.Api.csproj
+++ b/RegistrationApp.Api/RegistrationApp.Api.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RegistrationApp.BL\RegistrationApp.BL.csproj" />
+    <ProjectReference Include="..\RegistrationApp.DAL\RegistrationApp.DAL.csproj" />
+    <ProjectReference Include="..\RegistrationApp.IoC\RegistrationApp.IoC.csproj" />
   </ItemGroup>
 
 </Project>
