--- a/RegistrationApp.Infrastructure/RegistrationApp.Infrastructure.csproj
+++ b/RegistrationApp.Infrastructure/RegistrationApp.Infrastructure.csproj
@@ -7,13 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\RegistrationApp.Domain\RegistrationApp.Domain.csproj" />
-    <ProjectReference Include="..\RegistrationApp.Infrastructure\RegistrationApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
